css/style.css
@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap);

/* Utilities */
* 
{
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    list-style: none;
}

body, html 
{
    background: #f4f4f4;
    line-height: 1.6;
}

a
{
    text-decoration: none;
    color: #f4f4f4;
}

.container
{
    margin: auto;
    padding: 80px 0;
    max-width: 1200px;
    text-align: center;
}

.container h2 
{
    display: inline-block;
    margin: auto;
    font-size: 2.5rem;
    font-weight: 300;

    width: 400px;
    border-right: 1px solid;
    border-left: 1px solid;
}

h4
{
    display: inline-block;
    line-height: 1.4rem;
    margin-top: 50px;
    font-size: 1.2rem;
    font-weight: 600;
    border-bottom: 1px solid;
}


/* Navbar */
.navbar
{
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgba(0, 0, 0, 0.4);
    color: #f4f4f4;
    width: 100%;
    height: 70px;
    position: fixed;
    top: 0;
    padding: 0 30px;
    z-index: 20;
}

.navbar ul
{
    display: flex;
}

.navbar li a
{
    padding: 10px 10px;
    margin: 0 15px;
}

.navbar li a:hover
{
    border-bottom: 1px #f4f4f4 solid;
}

.GF
{
    font-weight: 700;
    font-size: 2rem;
    padding: 10px 20px;
}

header 
{
    background: url('../img/showcase.jpg') no-repeat center center/cover;
    height: 100vh;
    position: relative;
}

header::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* Hero content */
.hero-content
{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    height: 100%;
    max-width: 1200px;
    margin: auto;
    color: #f4f4f4;
}

.hero-content * 
{
    text-align: left;
    z-index: 10;
}

.left-content
{
    opacity: 0;
    transform: translateX(-1500px);
    transition: transform 0.5s ease-in-out, opacity 0.7s ease-in-out;
}

.left-content.loaded
{
    opacity: 1;
    transform: translateX(0);
}

.left-content h1
{
    font-weight: 100;
    font-size: 3.5rem;
    line-height: 1.2;
}

.title
{
    font-size: 1.2rem;
    font-weight: 400;
}

.left-content .description
{
    margin-top: 2.5rem;
    font-weight: 100;
    max-width: 500px;
}

#logo-img
{
    width: 0px;
    height: auto;
    margin: auto;
    transition: all 0.3s ease-in-out;
} 

#logo-img.loaded
{
    width: 430px;
    height: auto;
}

/* Main */
.carousel
{
    margin: 0 170px 0 170px;

    padding-bottom: 70px;
    border-bottom: #333 1px solid;
}

.carousel ul
{
    display: flex;
    justify-content: center;
    align-items: center; 
}

.carousel-item
{
    position: relative;
    width: 350px;
    height: 200px;
    margin: 20px 15px 0 15px;

    visibility: hidden;
    opacity: 0;
    box-shadow: 2px 2px 5px #333;

    transform: translateY(35px);
    transition: opacity 0.5s ease-in-out, transform 0.25s ease-in-out;

    z-index: 10;
}

.carousel p
{
    display: block;
    margin: 0 100px 0 100px;
    padding: 0 20px 0 20px;
    border-left: #333 1px solid;
    border-right: #333 1px solid;
    line-height: 0.5rem;

    opacity: 0;
    transition: all 0.25s ease-in-out;
}

.carousel-item.show
{
    display: absolute;
    visibility: visible;
    opacity: 1;
}

.carousel li:hover img
{
    transform: translateY(20px);
}

.carousel li:hover p
{
    opacity: 1;
    transform: translateY(30px);
}

/* Competenze */
.competenze
{
    background: #333;
    color: #f4f4f4;
}

.competenze-wrap
{
    margin-top: 50px;
}

.competenze ul
{
    margin-top: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.competenze li
{
    margin: 10px 30px 30px 30px;
}

.competenze li p
{
    font-weight: 300;
    font-size: 0.8rem;
}

.other-icon
{
    width: 70px;
    height: auto;
}

#skill-icon
{
    opacity: 0;
    transform: translateY(70px);
    transition: all 0.5s ease-in-out;
}

#skill-icon.show
{
    opacity: 1;
    transform: translateY(0);
}

/* Contatti */
.contatti ul
{
    margin-top: 70px;
}

.contatti li
{
    margin: 10px 0;
}

i
{
    padding: 10px;
}

 #contacts-item
{
    transform: translateX(-300px);
    opacity: 0;
    transition: all 0.5s ease-in-out;
}

#contacts-item.show
{
    opacity: 1;
    transform: translateX(0);
} 

/* Mobile */
@media (max-width: 1100px) {
    .navbar
    {
        display: none;
    }

    .hero-content
    {
        flex-direction: column;
        justify-content: center;
        margin: 0 50px 0 50px;
    }

    .left-content
    {
        transform: translateX(0);
    }

    #logo-img
    {
        display: none;
    }

    .carousel
    {
        margin: 0 30px 0 30px;
    }
    
    .carousel ul
    {
        flex-direction: column;
    }

    .carousel-item
    {
        max-width: 90vw;
        margin: 20px auto 0 auto;
    }

    .carousel p
    {
        margin: 0 50px 0 50px;
    }

    .competenze ul
    {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        margin: 70px 50px 0 50px;
    }

    .container h2 
    {
        width: auto;
        font-size: 2rem;
        padding: 0 50px 0 50px;
    }
}

